# setvault

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  alembic.ini  crowdin.yml  pyproject.toml  release-please-config.json  ruff.toml
apps/web/: pyproject.toml
apps/web/src/setvault_web/: config.py  cookies.py  create_admin.py  deps.py  main.py  rate_limit.py  restore.py  tusd_hooks.py
apps/web/src/setvault_web/api/: admin.py  auth.py  backup.py  bookmarks.py  bulk_action.py  catalog.py  catalog_admin.py  comments.py  connectors.py  dev_seed.py  embed.py  enrichment.py  feeds.py  images.py  ingest_sources.py  invites.py  jobs.py  me.py  media_roots.py  monitors.py  notes.py  notifications.py  password_reset.py  providers.py  recycle.py  scheduled_tasks.py  search.py  sets.py  setup.py  tracklist.py  uploads.py  url_rip.py  users.py  watch_folders.py  webhooks.py  ws.py
apps/web/src/setvault_web/middleware/: csrf.py  security_headers.py
apps/web/src/setvault_web/schemas/: ingest_sources.py  settings.py
apps/web/src/setvault_web/services/: notifications.py
apps/web/src/setvault_web/static/: index.html
apps/web/tests/: conftest.py  test_admin.py  test_admin_health.py  test_artist_enrich_api.py  test_audit.py  test_backup.py  test_bookmarks.py  test_bulk_action_api.py  test_catalog_admin.py  test_catalog_api.py  test_catalog_entity_pages.py  test_catalog_merge_api.py  test_comments.py  test_connectors.py  test_cookies.py  test_create_admin.py  test_csp_inline_hash.py  test_csrf.py  test_embed_api.py  test_enrichment_bulk.py  test_enrichment_id_this.py  test_enrichment_resolve.py  test_feeds.py  test_health.py  test_image_proxy.py  test_ingest_sources_api.py  test_invites.py  test_login.py  test_me.py  test_media_roots.py  test_monitor_settings_api.py  test_monitors_api.py  test_notifications.py  test_password_reset.py  test_private_notes.py  test_providers_admin.py  test_rate_limit.py  test_rip_jobs_clear.py  test_search.py  test_security_headers_embed.py  (+15 more)
apps/web/tests/fixtures/providers/: acoustid_lookup.json  discogs_release_search.json  mb_track_search.json
apps/web/tests/fixtures/tracklists/: 1001tracklists_sample.html  sample_paste.txt
apps/worker/: pyproject.toml
apps/worker/src/setvault_worker/: entrypoint.py
docs/: design-brief.md
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
scripts/: build-site-assets.mjs
site/: index.html
(+240 files in other folders)
