[project]
name = "setvault-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "setvault-core",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.9",
  "limits>=3.10",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setvault_web"]
