[project]
name = "setvault-web"
version = "0.8.2"
requires-python = ">=3.12"
dependencies = [
  "setvault-core",
  "setvault-providers",
  "setvault-ingest-sources",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.9",
  "limits>=3.10",
  "pydantic-settings>=2.3",
  "email-validator>=2.1",
  "rq>=1.16",
  "redis>=5.0",
  "feedgen>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setvault_web"]
