[project]
name = "setvault-worker"
version = "0.11.3"
requires-python = ">=3.12"
dependencies = [
  "setvault-core",
  "setvault-ingest-sources",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setvault_worker"]
